--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body{
     width: 100%;
     height: 100%;
-    background: linear-gradient( to right, #701e90, #c5b2cf);
+    background: linear-gradient( to right,  #ad5fcc, #ece6ef);
 }
 
 .perfil{
@@ -65,7 +65,7 @@ section{
     font-size: 20px;
     cursor: pointer;
     transition: .2s;
-    color:#e3b0fe;
+    color:#e9cff5;
     font-family:'Times New Roman', Times, serif;
     
     
