--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ button:hover, footer a.btn-footer:hover{
 }
 
 .degrade{
-    background: linear-gradient( to right, #b361d3, #230133);
+    background: linear-gradient( to right,  #b361d3, #6a0c93);
 }
 
 footer{
